# devcontainers_examples

./: .gitignore  README.md
go_app/: Makefile  go.mod  go.sum  main.go  main_test.go
go_app/.devcontainer/: dev.env  devcontainer.json  docker-compose.yaml
python_app/: Makefile  README.md  pyproject.toml
python_app/.devcontainer/: Dockerfile  dev.env  devcontainer.json  docker-compose.yaml
python_app/python_app/: main.py
python_app/tests/: test_main.py
