[tool.poetry]
name = "python-app"
version = "0.1.0"
description = ""
authors = ["Anton Tinyakov <anlorn@anlorn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.4"
pytest = "^8.3.2"
psycopg2 = "^2.9.9"
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
